--- a/src/paginas/adote/styles.css
+++ b/src/paginas/adote/styles.css
@@ -39,6 +39,11 @@ section h2 {
     height: 52px;
 }
 
+.btn__adopt:hover {
+        cursor: pointer;
+    }
+
+
 .adopt__form {
     display: grid;
     justify-content: center;
@@ -79,11 +84,6 @@ form input {
     gap: 0 2rem;
 }
 
-.form-part-n {
-    display: flex;
-
-}
-
 .adoption__form__container {
     font-weight: 700;
     font-size: 2.5rem;
@@ -97,7 +97,7 @@ form input {
 
 }
 
-.politica__container {
+.policy__container {
     font-weight: 400;
 
     font-size: 14px;
@@ -116,4 +116,13 @@ form input {
 
     height: 2.9375rem;
     width: 71.25rem
+}
+
+.submit__container:hover{
+    cursor: pointer;
+}
+
+.form__part__1 input  {
+
+    display: block;
 }
