--- a/src/paginas/contato/styles.css
+++ b/src/paginas/contato/styles.css
@@ -1,11 +1,16 @@
 @import url('../../styles.css');
 
+.h1 {
+    text-decoration: none;
+}
+
 .contact__container {
     display: flex;
     flex-direction: column;
     align-items: center;
 
-    margin-top: 4rem;
+    margin-top: 7rem;
+    margin-bottom: 11rem;
 
     gap: 2rem;
 }
