--- a/pages/contact/styles.css
+++ b/pages/contact/styles.css
@@ -130,3 +130,19 @@
  .message {
     padding: 1rem;
 }
+.modal {
+    text-align: center;
+  }
+  
+  .modal:before {
+    display: inline-block;
+    vertical-align: middle;
+    content: " ";
+    height: 100%;
+  }
+  
+  .modal-dialog {
+    display: inline-block;
+    text-align: left;
+    vertical-align: middle;
+  }
