--- a/styles.css
+++ b/styles.css
@@ -1,461 +1,471 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@300;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@300;500&display=swap");
 
 * {
-    margin: 0 !important;
-    padding: 0;
-    font-family: 'Montserrat', 'Segoe UI', -apple-system;
+  margin: 0 !important;
+  padding: 0;
+  font-family: "Montserrat", "Segoe UI", -apple-system;
 }
 
 ol,
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 table {
-    border-collapse: collapse;
-    border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 :root {
-    --cor-pink: #F22C9A;
-    --cor-purple: #6E00DB;
-    --cor-gray: #333333;
-    --cor-greenwater: #58E1E8;
-    --cor-white: #FFFFFF;
-    --cor-lightblue: #F5F8FF;
-    --cor-textcolor: #64728C;
-    --cor--black: #000000;
-    --cor--blue: #0039F5;
+  --cor-pink: #f22c9a;
+  --cor-purple: #6e00db;
+  --cor-gray: #333333;
+  --cor-greenwater: #58e1e8;
+  --cor-white: #ffffff;
+  --cor-lightblue: #f5f8ff;
+  --cor-textcolor: #64728c;
+  --cor--black: #000000;
+  --cor--blue: #0039f5;
 }
 
 .size {
-    height: 64rem;
+  height: 64rem;
 }
 
 .display-flex {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .justify-center {
-    justify-content: center;
+  justify-content: center;
 }
 
 .align-center {
-    align-items: center;
+  align-items: center;
 }
 
 .flex-column {
-    flex-direction: column;
+  flex-direction: column;
 }
 
 .bg-white {
-    background-color: var(--cor-white);
+  background-color: var(--cor-white);
 }
 
 .bg-blue {
-    background-color: var(--cor-lightblue);
+  background-color: var(--cor-lightblue);
 }
 
 header {
-    height: 7.5rem;
+  height: 7.5rem;
 }
 
 .header__container {
-    background-color: var(--cor-pink);
+  background-color: var(--cor-pink);
 
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  padding: 0 4rem;
+  width: 100%;
+  height: 7.5rem;
 
-    padding: 0 4rem;
-    width: 100%;
-    height: 7.5rem;
-
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .header__title {
-    display: flex;
-    gap: 1rem;
-    color: var(--cor-white);
-    text-decoration: none;
+  display: flex;
+  gap: 1rem;
+  color: var(--cor-white);
+  text-decoration: none;
 }
 
 .title {
-    font-weight: 700 !important;
+  font-weight: 700 !important;
 }
 
 .header__title .title {
-    font-size: 1rem;
+  font-size: 1rem;
 }
 
 .header__title:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .nav__container {
-    display: flex;
-    gap: 1rem;
-    font-weight: 700;
-    color: var(--cor-white);
+  display: flex;
+  gap: 1rem;
+  font-weight: 700;
+  color: var(--cor-white);
 }
 
 .nav__container a {
-    text-decoration: none;
-    color: var(--cor-white);
+  text-decoration: none;
+  color: var(--cor-white);
 }
 
 .nav__container li:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .home__container {
-    gap: 0 5rem;
+  gap: 0 5rem;
 }
 
 .home__container .title__home {
-    text-transform: uppercase;
-    font-size: 3.125rem;
-    color: var(--cor-gray) !important;
-    font-weight: 700 !important;
+  text-transform: uppercase;
+  font-size: 3.125rem;
+  color: var(--cor-gray) !important;
+  font-weight: 700 !important;
 }
 
 .home__container h2 {
-    font-weight: 400;
-    font-size: 1.5rem;
-    color: var(--cor-textcolor);
+  font-weight: 400;
+  font-size: 1.5rem;
+  color: var(--cor-textcolor);
 }
 
 .home__container button:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .home__container .left__container {
-    gap: 1rem 0;
-    flex-basis: 50%;
+  gap: 1rem 0;
+  flex-basis: 50%;
 }
 
 .about__container {
-    text-align: center;
-    gap: 3rem 0;
+  text-align: center;
+  gap: 3rem 0;
 }
 
 .about__container h2 {
-    text-transform: uppercase;
-    font-size: 2.5rem;
-    font-weight: 700;
-    color: var(--cor--black);
+  text-transform: uppercase;
+  font-size: 2.5rem;
+  font-weight: 700;
+  color: var(--cor--black);
 }
 
 .about__container p {
-    color: var(--cor-textcolor);
-    font-weight: 400;
-    font-size: 1.5rem
+  color: var(--cor-textcolor);
+  font-weight: 400;
+  font-size: 1.5rem;
 }
 
 .steps__container {
-    display: grid;
-    align-items: center;
+  display: grid;
+  align-items: center;
 }
 
 .steps__title {
-    text-transform: uppercase;
-    color: var(--cor--black);
-    text-align: center;
-    font-size: 2.5rem;
-    font-weight: 700;
+  text-transform: uppercase;
+  color: var(--cor--black);
+  text-align: center;
+  font-size: 2.5rem;
+  font-weight: 700;
 }
 
 .images__container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
 }
 
 .images__container li {
-    display: grid;
-    Flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
+  display: grid;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 
 .images__container li p {
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 1rem;
-    font-weight: 700;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 1rem;
+  font-weight: 700;
 }
 
 .images__container li img {
-    padding: 1rem;
+  padding: 1rem;
 }
 
 .action__btn {
-    background-color: var(--cor-purple);
-    color: var(--cor-white);
+  background-color: var(--cor-purple);
+  color: var(--cor-white);
 
-    text-transform: uppercase;
-    font-weight: 700;
+  text-transform: uppercase;
+  font-weight: 700;
 
-    width: 14.375rem;
-    height: 3.25rem;
+  width: 14.375rem;
+  height: 3.25rem;
 
-    border: none;
-    border-radius: .3125rem
+  border: none;
+  border-radius: 0.3125rem;
 }
 
 .action__btn:hover {
-    cursor: pointer;
-    color:var(--cor-purple);
-    background-color:var(--cor-white); 
+  cursor: pointer;
+  color: var(--cor-purple);
+  background-color: var(--cor-white);
 }
 
 .donation__container {
-    gap: 0 5rem;
+  gap: 0 5rem;
 }
 
 .donation__container .left__container {
-    gap: 1.5rem 0;
+  gap: 1.5rem 0;
 
-    padding-top: 2rem;
+  padding-top: 2rem;
 }
 
 .donation__container .left__container .container__title {
-    font-weight: 700;
-    font-size: 2rem;
-    color: var(--cor--black);
-    text-transform: uppercase;
+  font-weight: 700;
+  font-size: 2rem;
+  color: var(--cor--black);
+  text-transform: uppercase;
 }
 
 .donation__container div p {
-    color: var(--cor-textcolor);
+  color: var(--cor-textcolor);
 }
 
 .contact__container {
-    margin: 0 0 4rem !important;
- 
-    padding: 2rem;
+  margin: 0 0 4rem !important;
+
+  padding: 2rem;
 }
 
-
-
 .footer_container {
-    background-color: var(--cor-pink);
+  background-color: var(--cor-pink);
 
-    width: 100%;
-    height: 110px;
+  width: 100%;
+  height: 110px;
 
-    display: flex;
-    align-items: center;
-    padding: 0 4rem;
-    box-sizing: border-box;
-    gap: 1rem;
+  display: flex;
+  align-items: center;
+  padding: 0 4rem;
+  box-sizing: border-box;
+  gap: 1rem;
 }
 
 .footer_container h1 {
-    font-size: 1rem;
-    font-weight: 700;
-    color: var(--cor-white);
-    flex-grow: 1;
+  font-size: 1rem;
+  font-weight: 700;
+  color: var(--cor-white);
+  flex-grow: 1;
 }
 
 .logo {
-    width: 14px;
-    height: 14px;
+  width: 14px;
+  height: 14px;
 }
 
-@media(max-width: 670px) {
+@media (max-width: 670px) {
+  .home__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .home__container .left__container {
+    gap: 4rem 0;
+    padding-top: 6rem;
+  }
 
-    .header__container {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        gap: 1.5rem;
+  .home__container img {
+    width: 80vw !important;
+  }
 
-        padding: 0;
-    }
 
-    .contact__container {
-        margin-top: 3rem !important;
-    }
-
-    .contact__container h1 {
-        font-size: 32px !important;
-    }
-
-    .contact__container h2 {
-        font-size: 16px !important;
-    }
-
-    .contact__container li {
-        font-size: 16px !important;
-    }
-
-    #about-container {
-        padding: 1rem;
-    }
-
-    .steps__container {
-        height: 115rem !important;
-    }
-
-    .img {
-        max-width: 75%;
-    }
-
-    .home__container {
-        height: 80rem;
-    }
-
-    .donation__container {
-        height: 60rem;
-
-        display: flex;
-
-        flex-direction: column !important;
-    }
-
-    #donation-container {
-        padding: 1rem;
-
-        text-align: center;
-    }
-
-    .img__adopt {
-        max-width: 75%;
-    }
-
-    .adoption__form__container {
-        text-align: center;
-        padding: 1rem;
-    }
-
-    .adopt__container {
-        padding: 3rem;
-    }
-
-    .adopt__form form {
-
-        gap: 0.5rem;
-        width: 90vw;
-        grid-template-columns: 90vw;
-    }
-
-    .submit__container {
-        width: 90vw !important;
-    }
-
-    .contact__container {
-        margin-bottom: 4rem !important;
-    }
-
-    .contact__us__container {
-        margin: 0 !important;
-    }
-
-    .contact__us__form {
-        width: 90vw;
-
-        padding: 1rem;
-    }
-
-    .contact__us__form h2 {
-        text-align: center;
-
-        padding: 1rem;
-
-        font-size: 32px !important;
-    }
-
-    .contact__submit__container {
-        width: 90vw !important;
-    }
 }
 
+@media (max-width: 670px) {
+  .header__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1.5rem;
 
-@media(max-width: 768px) {
+    padding: 0;
+  }
 
-    .left__container {
-        width: 60vw !important;
-    }
+  .contact__container {
+    margin-top: 3rem !important;
+  }
 
-    #home-container {
-        gap: 0 1rem;
+  .contact__container h1 {
+    font-size: 32px !important;
+  }
 
-        flex-wrap: nowrap !important;
-    }
+  .contact__container h2 {
+    font-size: 16px !important;
+  }
 
-    #home-container img {
-        width: 40vw !important;
-    }
+  .contact__container li {
+    font-size: 16px !important;
+  }
 
-    .donation__container {
-        flex-wrap: nowrap;
+  #about-container {
+    padding: 1rem;
+  }
 
-        gap: 0 2rem;
+  .steps__container {
+    height: 115rem !important;
+  }
 
-        padding: 2rem;
+  .img {
+    max-width: 75%;
+  }
 
-        margin-top: 3rem;
-    }
+  .home__container {
+    height: 80rem;
+  }
 
-    .btn__steps__container {
-        padding: 2rem;
-    }
+  .donation__container {
+    height: 60rem;
 
-    .adopt__container {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
+    display: flex;
 
-        padding: 1rem;
+    flex-direction: column !important;
+  }
 
-        height: 500px !important;
-    }
+  #donation-container {
+    padding: 1rem;
 
+    text-align: center;
+  }
 
-    .left__container__adopt {
-        width: 44vw !important;
-    }
+  .img__adopt {
+    max-width: 75%;
+  }
 
-    .img__adopt {
-        width: 46vw;
-    }
+  .adoption__form__container {
+    text-align: center;
+    padding: 1rem;
+  }
 
-    #adopt-form {
-        grid-template-columns: 90vw;
-    }
+  .adopt__container {
+    padding: 3rem;
+  }
 
+  .adopt__form form {
+    gap: 0.5rem;
+    width: 90vw;
+    grid-template-columns: 90vw;
+  }
 
-    .adopt__form .row {
-        flex-direction: column;
-    }
+  .submit__container {
+    width: 90vw !important;
+  }
 
-    .adopt__form form {
-        grid-template-columns: 90vw;
-        padding: 1rem;
-        gap: 1rem;
-    }
+  .contact__container {
+    margin-bottom: 4rem !important;
+  }
 
-    .submit__container {
-        width: 90vw !important;
-    }
+  .contact__us__container {
+    margin: 0 !important;
+  }
 
-    .contact__us__container {
-        margin-bottom: 0 !important; 
-        margin-left: 0 !important;
-    }
+  .contact__us__form {
+    width: 90vw;
 
-    .contact__us__form{
-        width: 90vw;
-    }
+    padding: 1rem;
+  }
 
-    .contact__submit__container__p1 {
-        margin-bottom: 1rem;
-    }
-    .contact__submit__container {
-        width: 90vw !important;
-    }
-    }
+  .contact__us__form h2 {
+    text-align: center;
 
+    padding: 1rem;
+
+    font-size: 32px !important;
+  }
+
+  .contact__submit__container {
+    width: 90vw !important;
+  }
+}
+
+@media (max-width: 768px) {
+  .left__container {
+    width: 60vw !important;
+  }
+
+  #home-container {
+    gap: 0 1rem;
+
+    flex-wrap: nowrap !important;
+  }
+
+  #home-container img {
+    width: 40vw !important;
+  }
+
+  .donation__container {
+    flex-wrap: nowrap;
+
+    gap: 0 2rem;
+
+    padding: 2rem;
+
+    margin-top: 3rem;
+  }
+
+  .btn__steps__container {
+    padding: 2rem;
+  }
+
+  .adopt__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    padding: 1rem;
+
+    height: 500px !important;
+  }
+
+  .left__container__adopt {
+    width: 44vw !important;
+  }
+
+  .img__adopt {
+    width: 46vw;
+  }
+
+  #adopt-form {
+    grid-template-columns: 90vw;
+  }
+
+  .adopt__form .row {
+    flex-direction: column;
+  }
+
+  .adopt__form form {
+    grid-template-columns: 90vw;
+    padding: 1rem;
+    gap: 1rem;
+  }
+
+  .submit__container {
+    width: 90vw !important;
+  }
+
+  .contact__us__container {
+    margin-bottom: 0 !important;
+    margin-left: 0 !important;
+  }
+
+  .contact__us__form {
+    width: 90vw;
+  }
+
+  .contact__submit__container__p1 {
+    margin-bottom: 1rem;
+  }
+  .contact__submit__container {
+    width: 90vw !important;
+  }
+}
